syntax = "proto3";

import "google/protobuf/wrappers.proto";

package ecommerce;

option go_package = "./ecommerce";

service OrderManagement {
  // Unary RPC
  rpc addOrder(Order) returns (google.protobuf.StringValue);
  rpc getOrder(google.protobuf.StringValue) returns (Order);

  // Server streaming RPC
  rpc searchOrders(google.protobuf.StringValue) returns (stream Order);

  // Client streaming RPC
  rpc updateOrders(stream Order) returns (google.protobuf.StringValue);

  // Bidirectional streaming RPC
  rpc processOrders(stream google.protobuf.StringValue)
      returns (stream CombinedShipment);
}

message Order {
  string id = 1;
  repeated string items = 2;
  string description = 3;
  float price = 4;
  string destination = 5;
}

message CombinedShipment {
  string id = 1;
  string status = 2;
  repeated Order ordersList = 3;
}
